# ASRTG_SA

./: .gitignore  ASRTG_SA.ipynb  DataLoader.py  Hopf_Oscillator.py  ODEs.py  Output_Dynamic_System.py  pyDSP.py  readme.md  requirements.txt
.ipynb_checkpoints/: Show-checkpoint.ipynb
DSP/: CMakeLists.txt  DSP_Fun.cpp
DSP/include/: Dev_1order.h  Dev_1order_private.h  Dev_1order_types.h  Dev_2order.h  Dev_2order_private.h  Dev_2order_types.h  IIRFilter_Bandpass.h  IIRFilter_Bandpass_private.h  IIRFilter_Bandpass_types.h  IIRFilter_Lowpass.h  IIRFilter_Lowpass_private.h  IIRFilter_Lowpass_types.h  OmegaFilter.h  OmegaFilter_private.h  OmegaFilter_types.h  OutputFilter.h  OutputFilter_private.h  OutputFilter_types.h  TransDelay.h  TransDelay_private.h  TransDelay_types.h  multiword_types.h  rtmodel.h  rtwtypes.h
DSP/src/: Dev_1order.cpp  Dev_1order_data.cpp  Dev_2order.cpp  Dev_2order_data.cpp  IIRFilter_Bandpass.cpp  IIRFilter_Bandpass_data.cpp  IIRFilter_Lowpass.cpp  OmegaFilter.cpp  OutputFilter.cpp  TransDelay.cpp
TestData/: gait_data.csv  gait_walk_fast&slow.csv  upstairs.csv  walk&ups.csv
temp/: weight_upstair.npy  weight_upstair_cov.npy  weight_upstair_mean.npy  weight_walk.npy  weight_walk_cov.npy  weight_walk_mean.npy
